# tp-3-filipblazej

Projekt3/: CMakeLists.txt  test.py
Projekt3/include/: Projekt3Funkcje.hpp
Projekt3/python_bindings/: pythonbiblioteka.cpp
Projekt3/src/: Projekt3.cpp
Projekt4_TP/: Projekt4_sprawozdanie.md
Projekt4_TP/Projekt4TechnikiProgramowania/: Projekt4TechnikiProgramowania.cpp  Projekt4TechnikiProgramowania.rc  Projekt4TechnikiProgramowania.sln  Projekt4TechnikiProgramowania.vcxproj  Projekt4TechnikiProgramowania.vcxproj.filters  Resource.h
Projekt4_TP/Projekt4TechnikiProgramowania/Projekt4.16a0944a/x64/Debug/: Projekt4TechnikiProgramowania.exe.recipe  Projekt4TechnikiProgramowania.ilk  Projekt4TechnikiProgramowania.res  vc143.idb
Projekt4_TP/Projekt4TechnikiProgramowania/Projekt4.16a0944a/x64/Debug/Projekt4.16a0944a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Projekt4TechnikiProgramowania.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
